# Data-Engineering-Glossary

./: .env.example  .gitignore  .prettierignore  COWORK_PROJECT.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma-schema.txt
.github/workflows/: backup.yml  ci.yml
apps/web/: package.json  playwright.config.ts  proxy.ts
apps/web/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/admin/: page.tsx  sign-out-button.tsx
apps/web/app/quiz/: page.tsx  quiz-app.tsx  quiz-cards.tsx  reset-progress-button.tsx
apps/web/app/search/: page.tsx
apps/web/components/: profile-menu.tsx  search-box.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/components/ui/: alert-dialog.tsx  dropdown-menu.tsx
apps/web/e2e/: a11y.spec.ts  admin.spec.ts  auth.setup.ts
apps/web/lib/: admin-emails.test.ts  auth.ts  embedding.ts  enrichment.ts  keyword-search.ts  quiz-questions.test.ts  quiz-questions.ts  quiz.ts  rate-limit.ts  related.ts  schemas.ts  semantic-search.test.ts  semantic-search.ts  site-url.ts  srs-store.ts  srs.test.ts  srs.ts  term-duplicates.ts
apps/web/prisma/: schema.prisma  seed.ts
docs/: learning-log.md
pipelines/enrichment/: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
pipelines/enrichment/app/: config.py  logging_config.py  main.py
pipelines/enrichment/app/clients/: db.py  gemini.py  wikipedia.py
pipelines/enrichment/app/flows/: enrich_term.py
pipelines/enrichment/app/models/: schemas.py
pipelines/enrichment/tests/: test_enrich_term.py  test_wikipedia.py
(+29 files in other folders)
